--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,10 +12,15 @@
 
 .createTask {
 	padding: 10px;
-	margin: 10px 340px;
+	margin: 10px 450px;
 	border-radius: 25px;
 	background-color: #c7d3bf;
 }
+
+.searchData {
+	margin-left: 25px;
+}
+
 
 .loader {
 	position: fixed;
