--- a/src/Task/Task.module.css
+++ b/src/Task/Task.module.css
@@ -9,6 +9,12 @@
 	border-radius: 25px;
 }
 
+.link {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 button {
 	border: none;
 	background-color: #B5C6B8;
